fix submit border radius on safari

--- a/style.sass
+++ b/style.sass
@@ -269,6 +269,7 @@ header .container
     .footer-bg
         padding-top: 150px
         margin-top: 150px
+        margin-bottom: -2px
         background-image: url('./images/bg-footer-top-mobile.svg')
 
 // Footer
@@ -370,4 +371,6 @@ input:-webkit-autofill:active
         margin-right: 0    
     #submit
         width: 160px
-        font-size: 16px
+        font-size: 14px
+        padding: 12px 41px    
+        border-radius: 6px
